--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
+        "dev": "vite",
+        "build": "vite build",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
@@ -10,9 +11,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.2.7",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^2.3.3",
+        "autoprefixer": "^10.4.12",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
+        "laravel-vite-plugin": "^0.4.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.18",
+        "tailwindcss": "^3.2.1",
+        "vue": "^3.2.41"
     }
 }
